--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230307.0",
     "typescript": "^5.0.2",
-    "wrangler": "2.8.1"
+    "wrangler": "^2.12.3"
   },
   "private": true,
   "scripts": {
     "start": "wrangler dev",
     "deploy": "wrangler publish"
+  },
+  "dependencies": {
+    "@notionhq/client": "^2.2.3"
   }
 }
